removed the add route
